# stanford-cs336

./: .gitignore  PRACTICE.md  README.md  pyproject.toml
answers/: README.md
course/: README.md  lectures  official
course/assignments/01-basics/: answer  tutorial
course/assignments/02-systems/: answer  tutorial
course/assignments/03-scaling/: answer  tutorial
course/assignments/04-data/: answer  tutorial
course/assignments/05-alignment/: answer  tutorial
lectures/: lecture_01_tokenization.py  lecture_02_pytorch_flops.py  lecture_03_architectures.py  lecture_04_attention_moe.py  lecture_07_08_parallelism.py  lecture_09_11_scaling_laws.py  lecture_12_evaluation.py  lecture_15_16_training.py
notebooks/: 01_tokenization.ipynb
reference/lectures/: lecture_05_gpus_tpus.py  lecture_06_kernels_triton.py  lecture_10_inference.py  lecture_13_14_data.py  lecture_17_alignment_multimodal.py  lecture_18_19_guests.py
references/: README.md
scripts/: setup.sh
src/cs336/: __init__.py
src/cs336/architecture/: __init__.py  transformer.py
src/cs336/evaluation/: __init__.py
src/cs336/inference/: __init__.py
src/cs336/scaling/: __init__.py
src/cs336/systems/: __init__.py  kernels.py
src/cs336/tokenizer/: __init__.py  bpe.py
src/cs336/training/: __init__.py  trainer.py
tutorials/: README.md  lectures  official
tutorials/assignments/: assignment1-basics  assignment2-systems  assignment3-scaling  assignment4-data  assignment5-alignment
