[project]
name = "stanford-cs336"
version = "0.1.0"
description = "Stanford CS336: Language Modeling from Scratch — Spring 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.0",
    "einops>=0.8.0",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
    "datasets>=3.0.0",
    "transformers>=4.46.0",
    "sentencepiece>=0.2.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
    "wandb>=0.18.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.6.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
triton = [
    "triton>=3.0.0; sys_platform == 'linux'",
]
flash = [
    "flash-attn>=2.7.0; sys_platform == 'linux'",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.6.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
